@startuml

!include layout.puml

title Build In ActionMatcher

interface RequestMatcher{
    val type: String
    val configuration: Configuration
    match(request: Request, securityContext: SecurityContext): Boolean
}
interface ActionMatcher
class AllActionMatcher
class PathActionMatcher
class ReplaceablePathActionMatcher

RequestMatcher <|-- ActionMatcher
ActionMatcher <|-- AllActionMatcher
ActionMatcher <|-- PathActionMatcher
ActionMatcher <|-- ReplaceablePathActionMatcher
ActionMatcher <|-- CompositePathActionMatcher
@enduml
